# spent

./: .gitignore  CONTRIBUTING.md  LAUNCH.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md  basic_tracking.py  budget_alert.py  multi_provider.py  smart_routing.py
spent/: __init__.py  analyzer.py  claude_tracker.py  claude_web.py  cli.py  cost_engine.py  dashboard.py  dedup.py  pricing.py  router.py  storage.py  ticker.py  tracker.py  tui.py  web.py
spent/hooks/: session-end.sh  session-start.sh  track-tool-use.sh
spent/integrations/: claude_code.py
spent/patches/: __init__.py  anthropic_patch.py  openai_patch.py
tests/: test_analyzer.py  test_claude_code_integration.py  test_claude_tracker.py  test_cli_cc.py  test_cost_engine.py  test_pricing.py  test_storage.py  test_tracker.py  test_tui.py
