[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spent"
version = "0.1.0"
description = "See what your AI really costs. Zero code changes."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "maxhu" },
]
keywords = [
    "llm", "ai", "cost", "tracking", "openai", "anthropic",
    "tokens", "monitoring", "budget", "optimization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
all = ["openai>=1.0", "anthropic>=0.20"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
spent = "spent.cli:main"

[project.urls]
Homepage = "https://github.com/loplop-h/spent"
Repository = "https://github.com/loplop-h/spent"
Issues = "https://github.com/loplop-h/spent/issues"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["spent"]
